change title color

--- a/conf/general.conf
+++ b/conf/general.conf
@@ -11,7 +11,7 @@ FONT_SIZE_TITLE_FIGURE=20
 
 [COLOR]
 FONT_COLOR=#000000
-MAIN_COLOR=#6544fc
+MAIN_COLOR=#636EFA
 DARK_GRAY=#3f3f3f
 
 [TIME_DELTA_DAYS]
