--- a/conf/general.conf
+++ b/conf/general.conf
@@ -13,6 +13,7 @@ FONT_SIZE_TITLE_FIGURE=20
 FONT_COLOR=#000000
 MAIN_COLOR=#636EFA
 DARK_GRAY=#3f3f3f
+LIGHT_GRAY=#9f9f9f
 
 [TIME_DELTA_DAYS]
 HISTORICAL_DATA=1
