add config for font sizes and fix readme

--- a/conf/general.conf
+++ b/conf/general.conf
@@ -9,6 +9,10 @@ ENDPOINT=/dividends-calendar/Service/getCalendarFilteredData
 FONT_FIGURE=Verdana
 FONT_SIZE_TITLE_FIGURE=20
 
+[FONT_SIZE]
+TITLE_SIZE=15
+FOOTER_SIZE=11
+
 [COLOR]
 FONT_COLOR=#000000
 MAIN_COLOR=#636EFA
